working backtrack +  nonfunctional visual forward track

--- a/pages/content/tsconfig.json
+++ b/pages/content/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@extension/tsconfig/base",
   "compilerOptions": {
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "baseUrl": ".",
     "paths": {
       "@src/*": ["src/*"]
